run_logs/db08810d2a434d9a82002b887d5f1150.log
  File "/Users/brianswitach/lohas/bot_csv.py", line 812
    from __future__ import annotations
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: from __future__ imports must occur at the beginning of the file
